--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.7",
     "element-plus": "^2.8.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.8.2",
