--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "element-plus": "^2.8.6",
+    "sass": "1.77.5",
     "vue": "^3.5.12",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
@@ -19,7 +20,6 @@
     "@types/node": "^22.8.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.13.0",
-    "sass": "^1.80.4",
     "typescript": "~5.6.2",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-vue-components": "^0.27.4",
